--- a/clientes.yml
+++ b/clientes.yml
@@ -3,4 +3,4 @@
   designation: "CEO"
   company:
     name: "Tamu Microalgas Amazônicas"
-  image: "https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/eourInstructors1.svg"
+  image: "imagens/clientes/thyago_gatto.png"
