--- a/equipe.yml
+++ b/equipe.yml
@@ -1,11 +1,11 @@
 - name: "Gabriel P. Folhes"
-  role: "Founder, CTO"
-  bio: "Alice has over 10 years of experience in data science and analytics."
-  image: "https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/eourInstructors1.svg"
+  role: "Fundador, CEO"
+  bio: "Gabriel P. Folhes é graduando em economia na UFPA engenheiro de dados na Base dos Dados. Ao longo de sua formação, foi bolsista de iniciação científica da UFPA e do MADE-USP. Participou de consultorias para WRI e WWF. Atualmente, dedica-se a desenvolver a Uiro"
+  image: "imagens/equipe/gabriel.png"
   linkedin: "https://www.linkedin.com/in/gabriel-pisa/"
 
 - name: "Sandro Ribeiro"
-  role: "Founder, CEO"
-  bio: "Bob specializes in bioeconomy and sustainability research."
-  image: "https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/eourInstructors1.svg"
+  role: "Fundador, Gerente de Produtos"
+  bio: "Formado em Economia pela Universidade Federal do Pará (UFPA) e Trainee Itaú Unibanco da turma de 2022. Foi bolsista Núcleo de Altos Estudos da Amazônia (NAEA) e coordenou o Programa de Estágio da Prefeitura de Belém."
+  image: "imagens/equipe/sandro.png"
   linkedin: "https://www.linkedin.com/in/sandroribeiro49/"
