--- a/equipe.yml
+++ b/equipe.yml
@@ -1,6 +1,6 @@
 - name: "Gabriel P. Folhes"
   role: "Fundador, CEO"
-  bio: "Gabriel P. Folhes é graduando em economia na UFPA engenheiro de dados na Base dos Dados. Ao longo de sua formação, foi bolsista de iniciação científica da UFPA e do MADE-USP. Participou de consultorias para WRI e WWF. Atualmente, dedica-se a desenvolver a Uiro"
+  bio: "É graduando em economia na UFPA engenheiro de dados na Base dos Dados. Ao longo de sua formação, foi bolsista de iniciação científica da UFPA e do MADE-USP. Participou de consultorias para WRI e WWF. Atualmente, dedica-se a desenvolver a Uiro"
   image: "imagens/equipe/gabriel.png"
   linkedin: "https://www.linkedin.com/in/gabriel-pisa/"
 
