--- a/equipe.yml
+++ b/equipe.yml
@@ -1,11 +1,11 @@
 - name: "Gabriel P. Folhes"
-  role: "Fundador, CEO"
-  bio: "É graduando em economia na UFPA engenheiro de dados na Base dos Dados. Ao longo de sua formação, foi bolsista de iniciação científica da UFPA e do MADE-USP. Participou de consultorias para WRI e WWF. Atualmente, dedica-se a desenvolver a Uiro"
+  role: "Co-fundador, CEO"
+  bio: "É graduando em economia na UFPA engenheiro de dados part-time na Base dos Dados. Na Uiro, Gabriel é responsável pelo contato com os clientes e processos de iteração para construção de produtos de dados. Ele desenvolve e mantém a infraestrutura de Engenharia de Dados que subsidia implementação dos produtos e serviços de consultoria." 
   image: "imagens/equipe/gabriel.png"
   linkedin: "https://www.linkedin.com/in/gabriel-pisa/"
 
 - name: "Sandro Ribeiro"
-  role: "Fundador, Gerente de Produtos"
-  bio: "Formado em Economia pela Universidade Federal do Pará (UFPA) e Trainee Itaú Unibanco da turma de 2022. Foi bolsista Núcleo de Altos Estudos da Amazônia (NAEA) e coordenou o Programa de Estágio da Prefeitura de Belém."
+  role: "Co-fundador, Gerente de Produtos"
+  bio: "Formado em Economia UFPA e Trainee no Itaú Unibanco. Na Uiro, Sandro dedica-se a contínua formulação do negócio e ao desenvolvimento de produtos de dados. Além disso, mantém as mídias sociais da Uiro e produz análises de dados."
   image: "imagens/equipe/sandro.png"
   linkedin: "https://www.linkedin.com/in/sandroribeiro49/"
